--- a/style.css
+++ b/style.css
@@ -103,10 +103,41 @@ body {
   background: #404042;
   text-align: center;
   padding: 24px 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer p {
   color: white;
+}
+
+
+
+.footer-links-container {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: auto;
+  padding: 10px;
+  background-color: rgba(150,150,150,0.5);
+}
+
+.footer-links-container a {
+  color: black;
+  opacity: 0.7;
+}
+
+.footer-link-div {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.footer-link-div h3 {
+  color: white;
+  margin: 0 0 10px;
 }
 
 .cards {
@@ -121,6 +152,9 @@ body {
   .cards {
     grid-template-columns: 1fr;
   }
+
+  
+
 }
 
 
